# ML-Implimentations

./: .gitignore  CMakeLists.txt  Lesson_Plan.txt  names.txt
0-Helpers/: ActivationFunction.hpp  HelperFunctions.hpp  LossFunction.hpp
1-Perceptron/: CMakeLists.txt  Perceptron.cpp  Perceptron.hpp  main.cpp
10-3DConvolution/: CMakeLists.txt
13-2DRecurrentConvolution/: CMakeLists.txt
14-2DRecurrentConvolutionLayer/: CMakeLists.txt
15-2DRecurrentConvolutionNeuralNetwork/: CMakeLists.txt
17-3DRecurrentConvolutionLayer/: CMakeLists.txt
18-3DRecurrentConvolutionNeuralNetwork/: CMakeLists.txt
19-3DValidConvolutionLayer/: CMakeLists.txt
19-PositionalEncoding/: CMakeLists.txt
2-PerceptronLayer/: CMakeLists.txt  PerceptronLayer.cpp  PerceptronLayer.hpp  main.cpp
21-Transformer/: CMakeLists.txt
22-3DValidConvolutionNeuralNetwork/: CMakeLists.txt
23-Mamba Intermediate step 2/: CMakeLists.txt
24-Mamba/: CMakeLists.txt
3-DeepNeuralNetwork/: CMakeLists.txt  DeepNeuralNetwork.cpp  DeepNeuralNetwork.hpp  main.cpp
4-RecurrentPerceptron/: CMakeLists.txt  RecurrentPerceptron.hpp  main.cpp
5-RecurrentLayer/: CMakeLists.txt  RecurrentLayer.cpp  RecurrentLayer.hpp  main.cpp
6-RecurrentNeuralNetwork/: CMakeLists.txt  RecurrentNeuralNetwork.cpp  RecurrentNeuralNetwork.hpp  main.cpp
7-2DConvolution/: CMakeLists.txt
7-2DValidConvolutionLayer/: 2DValidConvolutionLayer.hpp  CMakeLists.txt  main.cpp
8-2DConvolutionLayer/: CMakeLists.txt
8-2DFullConvolutionLayer/: 2DFullConvolutionLayer.cpp  2DFullConvolutionLayer.hpp  CMakeLists.txt  main.cpp
9-2DConvolutionNeuralNetwork/: CMakeLists.txt
99-3DRecurrentConvolution/: CMakeLists.txt
99-MultiHeadAttention/: CMakeLists.txt
MLLib/: CMakeLists.txt
MLLib/Headers/: MLLib.hpp
MLLib/Src/: MLLib.cpp
TensorLib/: CMakeLists.txt  TensorLib.cpp  TensorLib.hpp  main.cpp
TensorLib/Kernels/: Mul.cl  Sum_Step.cl  Tensor_Block.cl
