project("MLL_Implimentations")

set(CMAKE_CXX_STANDARD 20)

add_subdirectory("MLLib")
add_subdirectory("1-Perceptron")
add_subdirectory("2-PerceptronLayer")
add_subdirectory("3-DeepNeuralNetwork")
add_subdirectory("4-RecurrentPerceptron")
add_subdirectory("5-RecurrentLayer")
add_subdirectory("6-RecurrentNeuralNetwork")
add_subdirectory("7-2DValidConvolutionLayer")
add_subdirectory("8-2DFullConvolutionLayer")
# add_subdirectory("8-2DConvolutionLayer")
# add_subdirectory("9-2DConvolutionNeuralNetwork")
# add_subdirectory("10-3DConvolution")
# add_subdirectory("11-3DConvolutionLayer")
# add_subdirectory("12-3DConvolutionNeuralNetwork")
# add_subdirectory("13-2DRecurrentConvolution")
# add_subdirectory("14-2DRecurrentConvolutionLayer")
# add_subdirectory("15-2DRecurrentConvolutionNeuralNetwork")
# add_subdirectory("16-3DRecurrentConvolution")
# add_subdirectory("17-3DRecurrentConvolutionLayer")
# add_subdirectory("18-3DRecurrentConvolutionNeuralNetwork")
# add_subdirectory("19-PositionalEncoding")
# add_subdirectory("20-MultiHeadAttention")
# add_subdirectory("21-Transformer")
#add_subdirectory("22-Mamba Intermediate step")
#add_subdirectory("23-Mamba Intermediate step 2")
#add_subdirectory("24-Mamba")